feat(SEO): Add meta tags and social media preview image
- Add meta tags to describe the page content
- Add a image to be used as a preview on social media

--- a/index.html
+++ b/index.html
@@ -2,8 +2,22 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Uma hora de silêncio interrompido por áudio customizável. Por link do youtube e arquivos de áudio." />
+    <meta name="keywords" content="hora, silêncio, interrompido, audio, timer, meme, memes, youtube, arquivo, customizável, customizado" />
+    <meta name="author" content="ZaikoXander" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Hora de Silêncio Interrompido" />
+    <meta property="og:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio." />
+    <meta property="og:image" content="/hora-de-silencio-interrompido.png" />
+    <meta property="og:url" content="horadesilenciointerrompido.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:title" content="Hora de Silêncio Interrompido" />
+    <meta name="twitter:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio." />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="/hora-de-silencio-interrompido.png" />
+    <meta name="twitter:url" content="horadesilenciointerrompido.vercel.app" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
