--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Uma hora de silêncio interrompido por áudio customizável. Por link do youtube e arquivos de áudio." />
-    <meta name="keywords" content="hora, silêncio, interrompido, audio, timer, meme, memes, youtube, arquivo, customizável, customizado" />
+    <meta name="description" content="Uma hora de silêncio interrompido por áudio customizável. Por link do youtube e arquivos de áudio ou vídeo." />
+    <meta name="keywords" content="hora, silêncio, interrompido, audio, video, timer, meme, memes, youtube, arquivo, customizável, customizado" />
     <meta name="author" content="ZaikoXander" />
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Hora de Silêncio Interrompido" />
-    <meta property="og:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio." />
+    <meta property="og:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio ou vídeo." />
     <meta property="og:image" content="/hora-de-silencio-interrompido.png" />
     <meta property="og:url" content="horadesilenciointerrompido.vercel.app" />
     <meta property="og:type" content="website" />
     <meta name="twitter:title" content="Hora de Silêncio Interrompido" />
-    <meta name="twitter:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio." />
+    <meta name="twitter:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio ou vídeo." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="/hora-de-silencio-interrompido.png" />
     <meta name="twitter:url" content="horadesilenciointerrompido.vercel.app" />
