--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Hora de Silêncio Interrompido" />
     <meta property="og:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio ou vídeo." />
-    <meta property="og:image" content="/hora-de-silencio-interrompido.png" />
-    <meta property="og:url" content="horadesilenciointerrompido.vercel.app" />
+    <meta property="og:image" content="/hour-of-interrupted-silence.png" />
+    <meta property="og:url" content="hdsi.vercel.app" />
     <meta property="og:type" content="website" />
     <meta name="twitter:title" content="Hora de Silêncio Interrompido" />
     <meta name="twitter:description" content="Uma hora de silêncio interrompido com áudio customizável! Por link do youtube e arquivos de áudio ou vídeo." />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="/hora-de-silencio-interrompido.png" />
-    <meta name="twitter:url" content="horadesilenciointerrompido.vercel.app" />
+    <meta name="twitter:image" content="/hour-of-interrupted-silence.png" />
+    <meta name="twitter:url" content="hdsi.vercel.app" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
